--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,24 @@ python: 3.6
 
 branches:
   only:
-  - master
+    - master
 
   except:
-  - project-template
+    - project-template
 
 matrix:
   include:
-    - name: "Project structure validation"
+    - name: 'Project structure validation'
       env: BALLET_TEST_TYPE=project_structure_validation
-    - name: "Feature API validation"
+    - name: 'Feature API validation'
       env: BALLET_TEST_TYPE=feature_api_validation
-    - name: "Feature acceptance evaluation"
+    - name: 'Feature acceptance evaluation'
       env: BALLET_TEST_TYPE=feature_acceptance_evaluation
-    - name: "Feature pruning evaluation"
+    - name: 'Feature pruning evaluation'
       env: BALLET_TEST_TYPE=feature_pruning_evaluation
 
 install:
+  - pip install --upgrade 'pip>=18.1'
   - make install
 
 script:
